--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,23 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/weblog?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://47.101.153.229:3306/weblog?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#¶Ë¿Ú
 server.port=8081
+
 logging.level.org.springframework.security=info
 
+#MyBatis
 mybatis.mapper-locations=classpath:mapper/*.xml
+
+#Redis
+spring.redis.database=0
+spring.redis.host=47.101.153.229
+spring.redis.password=123456
+spring.redis.port=6379
+spring.redis.jedis.pool.max-active=8
+spring.redis.jedis.pool.max-idle=8
+spring.redis.jedis.pool.max-wait=-1ms
+spring.redis.jedis.pool.min-idle=0
+
 
